<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label">SDRemount</string>
    <string name="explanation">This application needs root access to operate. Click on the button below to request root access for this application, then grant root access with your preferred root solution. Since this app runs automatically whenever an SD Card is mounted, it will usually be executed shortly after boot. Hence, it is preferred to allow root access all the time to ensure that the app does not time out until root is granted manually. As soon as root access is set up, you can go on and remount your sd card.  You can also hide the app icon from any launchers if you want to - usually it is not necessary to interact with this app once it has been set up.</string>
    <string name="pref_mountmaster_title">use global mount namespace</string>
    <string name="pref_mountmaster_desc">might help if there is no effect. might require Magisk root.</string>
    <string name="button_request_root">request root access</string>
    <string name="root_status_caption">root status:</string>
    <string name="root_status_unknown">unknown</string>
    <string name="root_status_granted">granted</string>
    <string name="root_status_denied">not granted</string>
    <string name="button_hide_app_icon">hide the launcher icon</string>
    <string name="explanation_hide_app_icon">This hides the app icon from any Launcher. You will need to reinstall the application to make the icon appear again.</string>
</resources>
