<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/explanation"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_requestRoot">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:text="@string/root_status_caption"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView_rootStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:paddingHorizontal="5dp"
            android:text="@string/root_status_unknown"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_requestRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_hideAppIcon"
        android:onClick="onRequestRootButtonClick"
        android:text="@string/button_request_root" />

    <Button
        android:id="@+id/button_hideAppIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onHideAppIconButtonClick"
        android:text="@string/button_hide_app_icon" />
</RelativeLayout>
